# TradeMon

./: .env  .gitignore  docker-compose.yml  readme.md
feeder/: .dockerfile  pyproject.toml  requirements.txt
feeder/app/: feeder.py  main.py
feeder/data/datasets/: analysis_data_2025-08-04_224123.tfrecord  analysis_data_2025-08-04_233113.tfrecord
feeder/data/tickers/: tickers.txt
reader/: .dockerfile  pyproject.toml
reader/app/: main.py  prompt_templates.json  reader.py
reader/tests/: test_reader.py
shared/: payloads.py  performance.py  rate_limiter.py  worker.py
stocker/: .dockerfile  pyproject.toml
stocker/app/: main.py  stocker.py
tester/: .dockerfile  requirements.txt
tester/tests/: test_inference.py
worker/: .dockerfile  pyproject.toml  requirements.txt
worker/app/: main.py  package.json  prompt_templates.json  worker.py
worker/tests/: test_search.py  test_worker.py
